--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend-sdk",
-  "version": "1.3.0",
+  "name": "vue-shop",
+  "version": "0.1.0",
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
     "gulp": "^3.9.1",
